--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-annotated-doc==0.0.4
+alembic==1.12.0
 annotated-types==0.7.0
 anyio==4.12.0
 bcrypt==4.0.1
@@ -23,11 +23,11 @@ python-dotenv==1.2.1
 python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
+requests==2.31.0
 rsa==4.9.1
 six==1.17.0
 SQLAlchemy==2.0.44
 starlette==0.50.0
-typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.38.0
 watchfiles==1.1.1
